--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Meu nome é João Pedro Salim e minha matrícula é 202335033
+    Meu nome é <em> João Pedro Salim </em> e minha matrícula é <strong>202335033</strong>.
 </body>
 </html>
